2008-04-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/CITATION: Updated JSS article information.

	* R/textdoccol.R (setAs): Added coerce method from list to
	corpus.

	* R/meta.R (meta): Improved meta data handling.

2008-03-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (materialize, tmMap): Improvements suggested by
	Christian Buchta.

	* inst/CITATION: Added template to include JSS article reference.

2008-03-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (tmMap): Introduced lazy mapping.

	* R/source.R: Added VectorSource.

2008-02-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Language codes should be in ISO 639-1 format.

	* R/textdoccol.R (asPlain): Preserve local meta data.

2008-01-31  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (writeCorpus): Function for writing a corpus
	containing plain text documents to disk.

2008-01-30  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (TermDocMatrix): Ensure that dimnames are
	always set correctly.

	* R/textdoccol.R: Set load = TRUE as default for load on demand
	since in most cases this is the wanted behaviour.

2008-01-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Renamed TextDocCol to Corpus, and Corpus to Content.

	* DESCRIPTION: Updated Version to 0.3 due to core name changes.

2008-01-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/meta.R (meta): New function for consistent access to meta data
	of document collections, repositories, and texts.

2008-01-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Better support for encodings.

2008-01-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (TextDocCol): Fixed bug regarding default reader
	selection when no reader argument is given.

2008-01-05  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/source.R (CSVSource): Now uses read.csv instead of scan
	internally.

2008-01-02  Ingo Feinerer  <h0125130@wu-wien.ac.at>
